{
    "name": "IsaacInputsActions",
    "maps": [
        {
            "name": "Character",
            "id": "a2537d88-3fd3-453d-bea7-27b0b6419f10",
            "actions": [
                {
                    "name": "MovementHorizontal",
                    "type": "Value",
                    "id": "b760f7e3-1857-4dcc-80cd-631efa323323",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementVertical",
                    "type": "Value",
                    "id": "11887d5e-dd2f-40e2-a673-d886ec4d7c08",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootRight",
                    "type": "Value",
                    "id": "0fdc49af-21a1-4f79-b2be-517de2184b7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootLeft",
                    "type": "Value",
                    "id": "6c784344-44c2-474c-9764-5418af49887e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootUp",
                    "type": "Value",
                    "id": "dd30eae2-7f3f-4438-a5fc-c8fcb8249432",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootDown",
                    "type": "Value",
                    "id": "c5136241-cdad-4ce6-8e10-0b0d8e9cf8f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootBomb",
                    "type": "Button",
                    "id": "f798e7a0-1ea1-4036-a704-10ff6f0faa12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "1a6f8800-3e73-4572-8486-9bcc1f81f28e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "037360a1-1218-42ae-a64c-90731779e4d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d9fa04f9-b6ff-4876-918c-a22bc8119f43",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "12e2b214-363e-49bc-8ceb-c7959d0ce0e9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "493fcf4d-bce2-456e-934f-8ed67c407ad7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "93975a2c-3e15-4d99-8687-743a359a14ac",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eef5abfb-e677-4ea7-8215-14881fe11af2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "622c9bb2-61f0-4795-be6d-e8bfc4d0d1a8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52f6cf96-986d-42ce-b819-6fc619b67fe2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69738462-7f4f-4491-a11f-749ab0c99bd3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ead6fba6-8a26-4c97-a286-8773ef90a81d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}